add the UI and voice feedback with Gradio

--- a/cv_parser_project/requirements.txt
+++ b/cv_parser_project/requirements.txt
@@ -1,12 +1,7 @@
-google-generativeai
-llama-index
-llama-index-core
-llama-index-utils-workflow
-llama-index-llms-gemini
-llama-parse
-llama-index-embeddings-gemini
-llama-index-embeddings-huggingface
-llama-index-readers-whisper
-gradio
+llama_index
+llama_index-llms-gemini
+llama_index-embeddings-huggingface
+ipykernel
+python-dotenv
 pydantic
-PyMuPDF
+gradio
